--- a/src/assets/habitaciones.css
+++ b/src/assets/habitaciones.css
@@ -1,5 +1,5 @@
 .content-div{
-    background-image:url('https://cafeversatil.com/bricoydeco/wp-content/uploads/2016/08/01-7.jpg');
+    background-image:url('https://i.pinimg.com/564x/d0/67/0d/d0670d01ce1bb85c7dee3d0433db18e8.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position:center;
@@ -8,7 +8,7 @@
     background-image:
     linear-gradient(to right,
        rgba(18, 26, 43, 0.801), rgba(18, 26, 43, 0.80) ),
-       url('https://cafeversatil.com/bricoydeco/wp-content/uploads/2016/08/01-7.jpg');
+       url('https://i.pinimg.com/564x/d0/67/0d/d0670d01ce1bb85c7dee3d0433db18e8.jpg');
     }
 
     .image-cover  {
